# GPU

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  eval.py  main.cpp
day01/: benchmark.txt  cuda.cuda.o.d  reference.py  submission.py  submission_naive.py  submission_shared_mem.py  test.txt
include/utils/: benchmark.hpp  cuda.hpp  helper.hpp  stat.hpp  timer.hpp  validate.h  validate.hpp
quizzes/: CMakeLists.txt
quizzes/convolution/: CMakeLists.txt  convolution_kernel.cu  convolution_kernel.h  quiz.cpp
quizzes/histogram/: CMakeLists.txt  histogram_kernel.cu  histogram_kernel.h  quiz.cpp  solution.cu  solution.h
quizzes/lenet/: CMakeLists.txt  README.md  lenet_kernel.cu  lenet_kernel.h  main.cpp  test.cpp
quizzes/matrix_transpose/: CMakeLists.txt  kernel.cu  kernel.h  quiz.cpp
quizzes/reduction/: CMakeLists.txt  quiz.cpp  reduction_kernel.cu  reduction_kernel.h
quizzes/stencil/: CMakeLists.txt  quiz.cpp  stencil_kernel.cu  stencil_kernel.h
src/: main.cpp
src/utils/: validate.cpp
